--- a/02-project-workflows/extra-theme.css
+++ b/02-project-workflows/extra-theme.css
@@ -22,6 +22,24 @@
   padding-top: 1em;
 }
 
+.left-column-small {
+  width: 12%;
+  height: 92%;
+  float: left;
+}
+.right-column-large {
+  width: 82%;
+  height: 92%;
+  float: right;
+}
+
+.full {
+  width: 100%;
+  height: 92%;
+  float: right;
+}
+
+
 /* Modifications */
 
 body {
